# docs/openapi.json
@@ -1839,6 +1839,22 @@
             }
           },
           {
+            "name": "period_id",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "anyOf": [
+                {
+                  "type": "string"
+                },
+                {
+                  "type": "null"
+                }
+              ],
+              "title": "Period Id"
+            }
+          },
+          {
             "name": "overdue",
             "in": "query",
             "required": false,
